tests/paczka1/fuzzy1/75616547.err
Error in line 8: Levj9hZ A51 3,6
Error in line 1: 5nxG12v A82 71,6
Error in line 15: IzY A362 79,1
Error in line 9: Levj9hZ A998 65,4
Error in line 20: 5nxG12v A998 87,99
Error in line 30: Levj9hZ A36q 77,8
Error in line 18: Levj9hZ A362 46,6
Error in line 32: 5nxG_2v A998 _44,8
Error in line 31: Levj9hZ A51 31,1
